SSM update (#153)
* SSM update

- rewrote config management to use the _AWS Simple Systems Manager_.
This allows using a static config which will later be used to get rid of
the Play 2.7 global application
- consolidated capi modules: merged each `-client` module with their
corresponding `-core` module.
- Removed the `Env` for all the S3 services since noone used them.

* cleanup

* documentation